src/objects/PSA_Event__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Date_Field__c</fullName>
        <description>IQVIAPSA-1217 - Date used for tracking compliance timelines in workflow email notifications</description>
        <inlineHelpText>Date used for tracking compliance timelines in workflow email notifications</inlineHelpText>
        <label>Actual Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <description>IQVIAPSA-1217 - Name to be populated on the event</description>
        <inlineHelpText>Name to be populated on the event</inlineHelpText>
        <label>Event Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Offset__c</fullName>
        <description>IQVIAPSA-1217 - Number of days from date to notify resources</description>
        <inlineHelpText>Number of days from date to notify resources</inlineHelpText>
        <label>Notification Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <description>IQVIAPSA-1217 - API name of the object</description>
        <inlineHelpText>API name of the object</inlineHelpText>
        <label>Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <description>IQVIAPSA-1217 - Used to capture another email address that can be used in email notifications</description>
        <inlineHelpText>Used to capture another email address that can be used in email notifications</inlineHelpText>
        <label>Other Email</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Resource_Field__c</fullName>
        <description>IQVIAPSA-1217 - Used to capture a resource field that can be used in email notifications</description>
        <inlineHelpText>Used to capture a resource field that can be used in email notifications</inlineHelpText>
        <label>Other Resource Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Date_Field__c</fullName>
        <description>IQVIAPSA-1217 - Date field that if populated will generate an event</description>
        <inlineHelpText>Date field that if populated will generate an event</inlineHelpText>
        <label>Planned Date Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Resource_Field__c</fullName>
        <description>IQVIAPSA-1217 - Used to capture a resource field that can be used in email notifications</description>
        <inlineHelpText>Used to capture a resource field that can be used in email notifications</inlineHelpText>
        <label>Primary Resource Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordTypes__c</fullName>
        <description>IQVIAPSA-1217 - Comma separated list of record types the Event applies to</description>
        <inlineHelpText>Comma separated list of record types the Event applies to</inlineHelpText>
        <label>RecordTypes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Resource_Field__c</fullName>
        <description>IQVIAPSA-1217 - Used to capture a resource field that can be used in email notifications</description>
        <inlineHelpText>Used to capture a resource field that can be used in email notifications</inlineHelpText>
        <label>Secondary Resource Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_Missed_Due_Date_Noti_Offset__c</fullName>
        <description>IQVIAPSA-4657</description>
        <inlineHelpText>This is required only for LR Tracker to trigger send missed due date notification.</inlineHelpText>
        <label>Send Missed Due Date Noti Offset</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Missed_Due_Date_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IQVIAPSA-1217 - Indicates whether the event will required a missed due date notification</description>
        <inlineHelpText>Indicates whether the event will required a missed due date notification</inlineHelpText>
        <label>Send Missed Due Date Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Fields__c</fullName>
        <description>IQVIAPSA-1217 - List of field API names that contain lookups to Stakeholders for the event</description>
        <inlineHelpText>List of field API names that contain lookups to Stakeholders for the event</inlineHelpText>
        <label>Stakeholder Fields</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>PSA Event</label>
    <nameField>
        <displayFormat>PEV-{000000}</displayFormat>
        <label>PSA Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PSA Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Actual_Date_Required_Missed_Notification</fullName>
        <active>true</active>
        <description>PSA-CLD-IQVIAPSA-1217- PSA Events must have &quot;Actual Date Field&quot; populated in order to have &quot;Send Missed Due Date Notifications&quot; set to true</description>
        <errorConditionFormula>AND(
 Actual_Date_Field__c = Null,
 Send_Missed_Due_Date_Notification__c = True,
 Object__c != &apos;PSSF__c&apos;
)</errorConditionFormula>
        <errorDisplayField>Actual_Date_Field__c</errorDisplayField>
        <errorMessage>You must populate an &quot;Actual Date Field&quot; in order to enable &quot;Send Missed Due Date Notification&quot;</errorMessage>
    </validationRules>
</CustomObject>